--- a/Brigade meadows/Brigade_project/Brigade meadows/about.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/about.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brigade Meadows - Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <style>
+    /* General styles */
     * {
       margin: 0;
       padding: 0;
@@ -17,41 +18,18 @@
     html, body {
       height: 100%;
       font-family: 'Poppins', sans-serif;
-      color: #fff;
+      color: #fff; /* Default text color, if not overridden */
+      overflow-x: hidden; /* Prevent horizontal scroll */
     }
 
-    .fullscreen-image {
-      position: relative;
-      height: 100vh;
-      width: 100vw;
-      background-image: url('assets/Whimsical Suburban Street Scene.png');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      z-index: 1;
-    }
-
+    /* Navbar - Copied from main-page immersive */
     .navbar {
-      position: absolute;
+      position: fixed; /* Changed to fixed */
       top: 0;
       left: 0;
       right: 0;
-      z-index: 2;
+      width: 100%; /* Ensure it spans full width when fixed */
+      z-index: 10; /* Increased z-index to ensure it's on top */
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -95,23 +73,67 @@
       color: #0077b6;
       background: none;
       border: none;
+      cursor: pointer; /* Added cursor for better UX */
     }
 
-    .hero-content {
+    /* Fullscreen Image Section (retained but image path updated) */
+    .fullscreen-image {
       position: relative;
-      z-index: 2;
+      height: 100vh;
+      width: 100vw;
+      /* Placeholder image for the whimsical suburban street scene */
+      background-image: url('assets/Whimsical Suburban Street Scene.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      padding: 0 1em; /* Add horizontal padding for mobile */
+      padding-top: 60px; /* Add padding to account for fixed navbar height */
     }
 
-    .about-heading {
+    /* Overlay for fullscreen-image */
+    .fullscreen-image .overlay { /* Specificity for this overlay */
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      z-index: 1; /* Below hero content and navbar */
+    }
+
+    /* Hero Content Styles (for fullscreen-image section) */
+    .hero-content {
+      position: relative; /* Essential for z-index to work */
+      z-index: 2; /* Ensures it's above the overlay */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; /* Center content within hero-content */
+      height: 100%; /* Take full height of parent to allow proper centering */
+    }
+
+    .hero-content .about-heading { /* Specificity for the hero heading */
       font-size: 4em;
       font-weight: 700;
-      margin-top: 5em;
+      margin-top: 5em; /* As per your provided code for this element */
       text-align: center;
       animation: fadeIn 2s ease-in-out;
+      color: #fff; /* Ensure text is white against overlay */
     }
+
+    .hero-content .arrow-down { /* Specificity for the hero arrow */
+      margin-top: 6em; /* As per your provided code for this element */
+      font-size: 2em;
+      color: white;
+      animation: bounce 2s infinite;
+    }
+
     .about-heading-box {
       display: inline-block;
       border: 1px solid #000;
@@ -127,13 +149,13 @@
       text-transform: uppercase;
     }
 
-
     .arrow-down {
       margin-top: 6em;
       font-size: 2em;
       color: white;
       animation: bounce 2s infinite;
     }
+
     .about-fullscreen {
       position: relative;
       width: 100%;
@@ -150,6 +172,17 @@
     }
 
     .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      z-index: 1;
+    }
+    .overlay {
       width: 100%;
       height: 100%;
       backdrop-filter: blur(8px); /* The blur effect */
@@ -159,10 +192,13 @@
       align-items: center;
       padding: 3em 1.5em;
     }
+
     .about-content {
       color: #fff;
       max-width: 960px;
       text-align: center;
+      position: relative; /* Ensure it's above the overlay */
+      z-index: 2; /* Ensure it's above the overlay */
     }
 
     .about-heading-box {
@@ -178,7 +214,7 @@
       font-weight: 800;
       letter-spacing: 1px;
       text-transform: uppercase;
-      color: #222;
+      color: #fff; /* Changed to white for better contrast on blurred overlay */
     }
 
     .about-content h2 {
@@ -192,45 +228,6 @@
       line-height: 1.8em;
       color: #f0f0f0;
     }
-
-    .water-fullscreen {
-      width: 100%;
-      min-height: 100vh;
-      background: #e0f7fa;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 3em 1.5em;
-    }
-
-    .water-content {
-      max-width: 960px;
-      text-align: center;
-    }
-
-    .water-heading-box {
-      display: inline-block;
-      border: 1px solid #0077b6;
-      background-color: #d0f0f7;
-      padding: 1.5em 2em;
-      margin-bottom: 2em;
-    }
-
-    .water-heading-box h2 {
-      margin: 0;
-      font-size: 2em;
-      font-weight: 800;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      color: #0077b6;
-    }
-
-    .water-content p {
-      font-size: 1.15em;
-      line-height: 1.8em;
-      color: #004e64;
-    }
-
 
     .water-conservation-section {
       background-image: url('assets/raw.webp'); /* Placeholder image for water */
@@ -260,7 +257,10 @@
       max-width: 900px; /* Adjust as needed */
       padding: 4rem 2rem; /* Responsive padding */
       color: #fff;
-      margin-left: 10%; /* Adjust margin to mimic the image's left alignment */
+      margin-left: 0; /* REMOVED original margin-left: 10%; */
+      margin-right: auto; /* Used with max-width and no fixed margin-left to center the block */
+      margin-left: auto; /* Used with max-width and no fixed margin-left to center the block */
+      text-align: center; /* Align text inside to center for mobile, will be overridden by media query for desktop */
     }
 
     .read-more-link {
@@ -288,26 +288,11 @@
       transition: background-color 0.3s ease;
       text-decoration: none; /* Remove underline for links */
     }
-    @keyframes bounce {
-      0%, 100% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(10px);
-      }
+    .download-button:hover {
+      background-color: #e0e0e0;
     }
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
+    /* Footer */
     .site-footer {
       background: #fff;
       color: #222;
@@ -340,6 +325,28 @@
       color: #023e8a;
     }
 
+    /* Keyframe Animations */
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(10px);
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Mobile responsiveness */
     @media (max-width: 768px) {
       .nav-links {
         display: none;
@@ -350,6 +357,7 @@
         right: 0;
         width: 100%;
         padding: 1em;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       }
 
       .nav-links.show {
@@ -361,42 +369,140 @@
       }
 
       .navbar {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: row; /* Changed back to row for mobile */
+        align-items: center;
+        justify-content: space-between; /* Space out logo and menu button */
+        padding: 0.7em 1em; /* Adjust padding for mobile */
       }
 
-      .about-heading {
-        font-size: 2em;
-        padding: 0 1em;
+      .fullscreen-image {
+        padding-top: 0; /* Remove top padding on smaller screens if not needed with hero-content's top margin */
+      }
+
+      .hero-content .about-heading {
+        font-size: 2.5em; /* Smaller font size for mobile */
+      }
+      .hero-content .arrow-down {
+        margin-top: 3em; /* Adjust top margin for mobile */
+      }
+
+      .about-content {
+        padding: 2em 1em; /* Adjust padding for smaller screens */
+      }
+      .about-heading-box {
+        padding: 1em 1.5em; /* Smaller padding for mobile box */
+        margin-bottom: 1.5em;
+        width: 100%; /* Make box full width on mobile */
+      }
+      .about-heading-box h2 {
+        font-size: 1.5em; /* Smaller font for mobile box heading */
+      }
+      .about-content h2 {
+        font-size: 2em; /* Smaller font for main heading */
+      }
+      .about-content p {
+        font-size: 1em; /* Smaller font for paragraph */
+      }
+
+      .water-conservation-section .content-wrapper {
+        margin-left: auto; /* Center the block on mobile */
+        margin-right: auto; /* Center the block on mobile */
+        padding: 2rem 1.5rem; /* Adjust padding for mobile */
+        text-align: center; /* Center text on mobile */
+      }
+      .water-conservation-section .content-wrapper h1 {
+        font-size: 3.5em; /* Smaller font size for mobile heading */
+      }
+      .water-conservation-section .content-wrapper p {
+        font-size: 1em; /* Smaller font size for mobile paragraphs */
+      }
+      .water-conservation-section .content-wrapper .read-more-link,
+      .water-conservation-section .content-wrapper .download-button {
+        justify-content: center; /* Center the links/buttons */
+      }
+    }
+    /* Tablet responsiveness */
+    @media (min-width: 769px) and (max-width: 1024px) {
+      .navbar {
+        padding: 0.7em 1.5em;
+      }
+      .fullscreen-image {
+        padding-top: 80px; /* Adjust padding for fixed navbar on tablet */
+      }
+      .hero-content .about-heading {
+        font-size: 3.5em;
+      }
+      .about-content {
+        max-width: 760px;
+        padding: 0 1.5em;
+      }
+      .about-heading-box {
+        padding: 1.2em 1.8em;
+      }
+      .about-heading-box h2 {
+        font-size: 1.8em;
+      }
+      .about-content h2 {
+        font-size: 2.2em;
+      }
+      .about-content p {
+        font-size: 1.1em;
+      }
+      .water-conservation-section .content-wrapper {
+        margin-left: 8%; /* Keep left alignment for larger screens */
+        margin-right: auto; /* To push it to left */
+        text-align: left; /* Align text to left on larger screens */
+      }
+      .water-conservation-section .content-wrapper h1 {
+        font-size: 4.5em;
+      }
+      .water-conservation-section .content-wrapper .read-more-link,
+      .water-conservation-section .content-wrapper .download-button {
+        justify-content: flex-start; /* Align to left on larger screens */
+      }
+    }
+    /* Desktop responsiveness */
+    @media (min-width: 1025px) {
+      .fullscreen-image {
+        padding-top: 80px; /* Adjust padding for fixed navbar on desktop */
+      }
+      .water-conservation-section .content-wrapper {
+        margin-left: 10%; /* Original desktop margin */
+        margin-right: auto; /* To push it to left */
+        text-align: left; /* Align text to left on desktop */
+      }
+      .water-conservation-section .content-wrapper .read-more-link,
+      .water-conservation-section .content-wrapper .download-button {
+        justify-content: flex-start; /* Align to left on desktop */
       }
     }
   </style>
 </head>
 <body>
+<nav class="navbar">
+  <a href="index.html" class="logo"><i class="fa-solid fa-building"></i> BRIGADE MEADOWS</a>
+  <button class="mobile-menu" id="mobile-menu-btn"><i class="fa fa-bars"></i></button>
+  <ul class="nav-links" id="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="amenities.html">Amenities</a></li>
+    <li><a href="events.html">Events</a></li>
+    <li><a href="pet.html">Pet Policy</a></li>
+    <li><a href="admin/" id="admin-link" style="display: none;">Admin</a></li>
+  </ul>
+</nav>
 
-<div class="fullscreen-image">
+<section class="fullscreen-image">
+  <!-- Overlay and Hero Content added here -->
   <div class="overlay"></div>
-
-  <!-- Navbar -->
-  <nav class="navbar">
-    <a href="index.html" class="logo"><i class="fa-solid fa-building"></i> BRIGADE MEADOWS</a>
-    <button class="mobile-menu" id="mobile-menu-btn"><i class="fa fa-bars"></i></button>
-    <ul class="nav-links" id="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="amenities.html">Amenities</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="pet.html">Pet Policy</a></li>
-      <li><a href="admin/" id="admin-link" style="display: none;">Admin</a></li>
-    </ul>
-  </nav>
 
   <!-- Center Content -->
   <div class="hero-content">
     <div class="about-heading">About Us</div>
     <div class="arrow-down"><i class="fas fa-arrow-down"></i></div>
   </div>
-</div>
+</section>
+
 <section class="about-fullscreen">
   <div class="overlay">
     <div class="about-content" id="about-section">
@@ -434,7 +540,7 @@
       <span class="text-2xl">→</span>
     </a>
 
-    <a href="assets/Water_Conservation_Presentation.pptx.pdf" download="Our_Water_Strategy.pdf" class="download-button">
+    <a href="#" download="Our_Water_Strategy.pdf" class="download-button">
       OUR WATER STRATEGY
     </a>
   </div>
