--- a/Brigade meadows/Brigade_project/Brigade meadows/rules.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/rules.html
@@ -244,11 +244,23 @@
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="amenities.html">Amenities</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="pet.html">Pet Policy</a></li>
-            <li><a href="admin/" id="admin-link" style="display: none;">Admin</a></li>
-        </ul>
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Policy <i class="fa fa-chevron-down"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="security-policy.html">Security Policies</a></li>
+                    <li><a href="interior-guidelines.html">Interior Work</a></li>
+                    <li><a href="housekeeping.html">Housekeeping & Waste</a></li>
+                    <li><a href="pet-policy.html">Pet Policy</a></li>
+                    <li><a href="party-hall.html">Party Hall</a></li>
+                    <li><a href="swimming-pool.html">Swimming Pool</a></li>
+                    <li><a href="gym-guidelines.html">Gym</a></li>
+                    <li><a href="play-area.html">Children's Play Area</a></li>
+                    <li><a href="penalties.html">Rule Violation & Penalty</a></li>
+                    <li><a href="move.html">Move-In / Move-Out</a></li>
+                </ul>
+            </li>
     </nav>
     <header class="hero-section" data-aos="fade-up">
         <h1><i class="fa-solid fa-dog"></i> Pet Policy & Stray Dog Solutions</h1>
