--- a/Brigade meadows/Brigade_project/Brigade meadows/security-policy.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/security-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brigade Meadows - Move In/Out</title>
+    <title>Brigade Meadows - Security SOP</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css" />
@@ -226,7 +226,7 @@
 </head>
 <body>
     <nav class="navbar" data-aos="fade-down">
-        <a href="index.html" class="logo"><i class="fa-solid fa-building"></i> BRIGADE MEADOWS</a>
+        <a href="index.html" class="logo"><i class="fa-solid fa-shield-alt"></i> BRIGADE MEADOWS</a>
         <button class="mobile-menu" id="mobile-menu-btn" aria-label="Open Menu"><i class="fa fa-bars"></i></button>
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Home</a></li>
@@ -248,110 +248,106 @@
                     <li><a href="move.html">Move-In / Move-Out</a></li>
                 </ul>
             </li>
-            <li><a href="admin/" id="admin-link" style="display: none;">Admin</a></li>
-        </ul>
     </nav>
     <header class="hero-section" data-aos="fade-up">
-        <h1><i class="fa-solid fa-truck-moving"></i> Move-In / Move-Out Guidelines</h1>
-        <p>Your guide to a smooth and compliant moving process.</p>
-        <a href="#move-guidelines" class="sop-button">View Guidelines</a>
+        <h1><i class="fa-solid fa-shield-alt"></i> Security SOP</h1>
+        <p>Standard Operating Procedures for a safe and secure community.</p>
+        <a href="#security-policies" class="sop-button">View Security Policies</a>
         <div class="scroll-down-arrow">
             <i class="fa-solid fa-angle-down"></i>
         </div>
     </header>
     <main class="main-content">
-        <section id="move-guidelines" data-aos="fade-right">
-            <div class="section-heading"><i class="fa-solid fa-file-signature"></i> Move-In / Move-Out Policy</div>
-            <h3>1. Application & Documentation</h3>
-  <ul>
-    <li>Residents (Owners/Tenants) must complete the <strong>Move-In/Move-Out Application Form</strong> with all fields properly filled.</li>
-    <li>A valid <strong>Lease/Rental Agreement</strong> must be submitted with the Move-In/Move-Out Application.</li>
-    <li>The tenants listed in the Lease/Rental Agreement must match those in the Application Form.</li>
-    <li>Application must be submitted to the Estate Management (EM) office for verification and approval.</li>
-  </ul>
-
-  <h3>2. Tenant Verification & Compliance</h3>
-  <ul>
-    <li>For bachelor tenants, ensure all names are included in the <strong>Lease/Rental Agreement</strong>.</li>
-    <li>The number of bachelor tenants must comply with the community regulations:
-      <ul>
-        <li>1 bachelor Tenant for 1 BHK</li>
-        <li>2 bachelor Tenants for 2 BHK</li>
-        <li>3 bachelor Tenants for 3 BHK</li>
-      </ul>
-    </li>
-    <li>Bachelor tenants must submit the <strong>Bachelor Tenant Format</strong>, signed by all tenants.</li>
-    <li>Tenant details will be verified against the Lease Agreement to ensure compliance with society regulations.</li>
-    <li>The Move-In/Move-Out Application must be fully filled with no missing or incorrect details.</li>
-  </ul>
-
-  <h3>3. Financial Clearance</h3>
-  <ul>
-    <li>Verify that all outstanding charges (CAM dues, penalties, or other fees) are cleared before granting permission for Move-In/Move-Out.</li>
-    <li>If outstanding dues exist, tenants must settle them before proceeding with the Move-In or Move-Out.</li>
-    <li>If tenants have any pending payments, the owner must assist them in clearing the pending charges before processing the application.</li>
-    <li>Once financial clearance is obtained, the approval for the move will be processed.</li>
-  </ul>
-
-  <h3>4. KYC & Security Compliance</h3>
-  <ul>
-    <li>The EM office will collect KYC documents such as Aadhaar, Passport, or other valid Government-issued ID from each tenant or resident.</li>
-    <li>Prospective tenants must pay Move-In/Move-Out Charges and provide a <strong>payment receipt or UTR number</strong> as proof of payment in the application form.</li>
-    <li>The copies of the Move-In/Move-Out Form must be shared with the security team to ensure the move is logged and cleared by security before proceeding.</li>
-    <li>The original Move-In/Move-Out form must be submitted to the EM office for records and approval.</li>
-    <li>Any discrepancies or missing documents will result in delays, and the move will be deferred until the required documents are provided.</li>
-  </ul>
-
-  <h3>5. Vehicle Registration & Parking Stickers</h3>
-  <ul>
-    <li>Once the Move-In formalities are completed, tenants must submit <strong>vehicle registration (RC) copies</strong> and a <strong>valid driving license</strong> to the EM office for verification.</li>
-    <li>Vehicle stickers will be issued only after completing all the Move-In formalities and after proper verification of the documents.</li>
-    <li>Vehicle stickers will be provided based on the number of vehicles allowed per unit according to the society's policy.</li>
-    <li>Ensure that all vehicles registered for Move-In/Move-Out comply with parking and entry regulations set by the society.</li>
-    <li>Vehicles will be allowed to park in designated areas only, and unauthorized parking will incur penalties.</li>
-  </ul>
-
-  <h3>6. Move-In/Move-Out Time & Day Restrictions</h3>
-  <ul>
-    <li><strong>Move-in and move-out activities are not allowed on Sundays, Public Holidays, or after 6:00 PM on any working day.</strong></li>
-    <li>Any move activities that take place outside the permitted time will be <strong>subject to penalties or a fine.</strong></li>
-    <li>Moves are allowed only during standard operational hours to ensure minimal disruption to the community.</li>
-    <li>Specific time slots for the move-in and move-out should be coordinated with the Estate Management office for approval.</li>
-    <li>Prior notice of at least one day is required before the move is scheduled to ensure that all formalities are in place.</li>
-  </ul>
-
-  <h3>7. System Update & Final Approvals</h3>
-  <ul>
-    <li>All resident and tenant details must be updated in the <strong>MyGate portal</strong> before proceeding with the move.</li>
-    <li>Once all documentation is completed, and payments are verified, final approval must be obtained from the Estate Office before moving activities can commence.</li>
-    <li>The final move is recorded in the MyGate portal for security tracking and access control.</li>
-    <li>The Estate Management office will ensure that the property is fully compliant with the necessary guidelines for the move to proceed smoothly.</li>
-  </ul>
-
-  <h3>8. Elevator Usage</h3>
-  <ul>
-    <li><strong>Passenger lifts must not be used</strong> for carrying heavy items or during move-in/move-out activities.</li>
-    <li>Residents should use <strong>service lifts</strong> or carry heavy items via stairs to avoid damaging the lifts.</li>
-    <li>The use of lifts during the move must be coordinated with security personnel to avoid overcrowding or misuse.</li>
-  </ul>
-
-  <h3>9. Cleanliness & Housekeeping Responsibility</h3>
-  <ul>
-    <li>During Move-In/Move-Out, all packaging waste, discarded furniture, and materials must be removed by the resident or tenant.</li>
-    <li><strong>Common areas, corridors, or lobbies must not be littered</strong> with items during the move.</li>
-    <li>Any waste or debris left behind will result in cleaning fees and penalties, which the tenant or owner will be responsible for.</li>
-  </ul>
-
-  <h3>10. Penalties & Rule Violations</h3>
-  <ul>
-    <li>Moving outside permitted hours will result in a fine. This fine will be classified based on the severity of the violation (low, medium, or high).</li>
-    <li>Using common areas, elevators, or damaging society property during the move will incur fines and the deduction of security deposits.</li>
-    <li><strong>Spitting, smoking, or improper garbage disposal</strong> during Move-In/Move-Out activities will lead to penalties.</li>
-    <li>Any damage caused to the property, including furniture or infrastructure, will be charged to the moving party, and the costs will be recovered from their security deposit.</li>
-  </ul>
+        <section id="security-policies" data-aos="fade-right">
+            <div class="section-heading"><i class="fa-solid fa-user-shield"></i> Security Policies</div>
+            <ul>
+                <li><strong>Access Control & Visitor Management</strong>
+                    <ul>
+                        <li>All visitors must be registered in the security logbook or digital visitor management system (MyGate), and approval must be obtained before granting entry.</li>
+                        <li>Delivery personnel must be verified and allowed entry only after confirmation from the concerned resident.</li>
+                        <li>Vendors, maintenance workers, and service providers must undergo screening, receive temporary ID badges, and obtain approval before entry.</li>
+                        <li>Residents should inform security in advance about expected guests or large gatherings (or provide MyGate approval).</li>
+                        <li>Unauthorized salespersons, marketers, or unregistered individuals should be denied entry.</li>
+                    </ul>
+                </li>
+                <li><strong>Vehicle & Parking Management</strong>
+                    <ul>
+                        <li>Only authorized vehicles are permitted entry; visitor vehicles must be registered at the security desk as per norms.</li>
+                        <li>Parking rules and traffic regulations within the complex must be strictly enforced.</li>
+                        <li>Emergency vehicle access must always be maintained and kept clear of obstructions.</li>
+                        <li>Vehicles should not be parked in walkways or non-designated areas.</li>
+                        <li>Regular patrols must be conducted to identify unauthorized parking or abandoned vehicles.</li>
+                    </ul>
+                </li>
+                <li><strong>Gate Security & Patrol Duties</strong>
+                    <ul>
+                        <li>Security personnel must be stationed at designated gates to monitor entry and exit.</li>
+                        <li>Regular patrols (on foot or bicycle) must be conducted at scheduled intervals across residential blocks, common areas, parking lots, and perimeter zones.</li>
+                        <li>Security must ensure that all common area doors, gates, and exits are secured after operational hours.</li>
+                        <li>CCTV surveillance must be actively monitored, and any suspicious activity must be reported immediately.</li>
+                    </ul>
+                </li>
+                <li><strong>CCTV & Surveillance Monitoring</strong>
+                    <ul>
+                        <li>Security personnel must monitor CCTV footage continuously and report any unusual activities.</li>
+                        <li>Any tampering or malfunctioning of CCTV systems must be reported immediately to the Management / Estate Office.</li>
+                        <li>Recorded footage must not be disclosed to any individual without prior authorization from the EC or Estate Management Team.</li>
+                    </ul>
+                </li>
+                <li><strong>Emergency Response Protocol</strong>
+                    <ul>
+                        <li>Security personnel must be trained to handle medical emergencies, fire incidents, theft, and vandalism.</li>
+                        <li>In case of emergencies, security must promptly contact emergency services, the EC, and the Estate Management Team. If necessary, the local police station must be informed.</li>
+                        <li>Firefighting equipment and emergency exits should be checked regularly, and evacuation procedures must be well understood.</li>
+                        <li>If a resident reports a security concern, security personnel must document and escalate the issue appropriately.</li>
+                    </ul>
+                </li>
+                <li><strong>Handling Deliveries & Service Personnel</strong>
+                    <ul>
+                        <li>Security personnel must not receive any items on behalf of residents.</li>
+                        <li>Domestic staff and service providers must be checked and logged in at every entry and exit.</li>
+                        <li>All items uploaded by the residents in the MyGate Portal are to be checked and confirmed.</li>
+                    </ul>
+                </li>
+                <li><strong>Guest Entry Guidelines for Student Tenants</strong>
+                    <ul>
+                        <li>Residents must send a pre-approved invitation via the MyGate app for guest entry.</li>
+                        <li>If a guest arrives in a commercial vehicle (such as Ola, Uber, or a taxi), the security team will record the flat number and vehicle details. The resident must approve the entry through MyGate.</li>
+                        <li>Guest entry for student tenants is restricted between 10:30 PM and 6:00 AM.</li>
+                        <li>In case of an emergency, residents should contact the Estate Management Office/ Security Supervisor for assistance.</li>
+                    </ul>
+                </li>
+                <li><strong>Incident Reporting & Documentation</strong>
+                    <ul>
+                        <li>A daily security report must be maintained, documenting key incidents, visitor logs, and patrol findings.</li>
+                        <li>Major security breaches, thefts, vandalism, or conflicts must be reported immediately to the EC and Estate Management Team, and to Police Authorities if required.</li>
+                        <li>Incident reports must include the date, time, location, involved individuals, and actions taken.</li>
+                        <li>All registers maintained by the Security Personnel must be handed over to the EM office on a bi-monthly basis.</li>
+                    </ul>
+                </li>
+                <li><strong>Responsibilities of the Security Supervisor</strong>
+                    <ul>
+                        <li>Ensure all security personnel comply with this SOP.</li>
+                        <li>Conduct random checks and training sessions for security guards.</li>
+                        <li>Coordinate with the EC and Estate Management Team for security updates and improvements.</li>
+                        <li>Ensure emergency drills are conducted at regular intervals.</li>
+                        <li>Address resident complaints related to security issues.</li>
+                    </ul>
+                </li>
+                <li><strong>General Code of Conduct for Security Personnel</strong>
+                    <ul>
+                        <li>Must remain vigilant, wear the designated uniform, and display ID cards at all times.</li>
+                        <li>Must behave professionally, politely, and ethically at all times.</li>
+                        <li>Must be familiar with fire safety, first aid, and efficient usage of walkie-talkies.</li>
+                        <li>Unauthorized persons or vehicles must not be allowed entry into the premises.</li>
+                        <li>Guards must not engage in personal calls or conversations, and should never leave their post unattended.</li>
+                        <li>Smoking, drinking, or consuming intoxicants while on duty is strictly prohibited. The premises is a No-Smoking Zone.</li>
+                        <li>Any violation of the code of conduct will result in disciplinary action or termination of service.</li>
+                    </ul>
+                </li>
             </ul>
             <div class="pdf-download-container">
-                <a href="assets/Move-In-Out-Guidelines.pdf" download class="sop-button"><i class="fa fa-download"></i> Download Full Guidelines PDF</a>
+                <a href="assets/SOP%2025-03-2025%20EC-6.pdf" download class="sop-button"><i class="fa fa-download"></i> Download Full SOP PDF</a>
             </div>
         </section>
     </main>
@@ -361,7 +357,7 @@
             <a href="about.html">About</a>|
             <a href="services.html">Services</a>|
             <a href="events.html">Events</a>|
-            <a href="move.html">Move In/Out</a>
+            <a href="sop.html">Security SOP</a>
         </div>
         <div class="footer-social">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -398,13 +394,7 @@
                 }
             });
         }
-        document.querySelectorAll('.dropbtn').forEach(function(btn) {
-            btn.addEventListener('click', function(e) {
-                e.preventDefault();
-                var menu = this.parentElement.querySelector('.dropdown-menu');
-                if(menu) menu.style.display = (menu.style.display === 'block' ? 'none' : 'block');
-            });
-        });
     </script>
 </body>
 </html>
+
