--- a/Brigade meadows/Brigade_project/Brigade meadows/events.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/events.html
@@ -474,18 +474,64 @@
         padding: 0.8em 0.6em;
       }
     }
+    dropdown-menu {
+      display: none;
+      position: absolute;
+      top: 2.2em;
+      left: 0;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      border-radius: 8px;
+      min-width: 220px;
+      z-index: 100;
+      padding: 0.5em 0;
+  }
+  .dropdown:hover .dropdown-menu,
+  .dropdown:focus-within .dropdown-menu {
+      display: block;
+  }
+  .dropdown-menu li {
+      border-bottom: 1px solid #f0f0f0;
+      padding: 0;
+  }
+  .dropdown-menu li:last-child {
+      border-bottom: none;
+  }
+  .dropdown-menu a {
+      color: #222;
+      padding: 0.7em 1.2em;
+      display: block;
+      border-radius: 0;
+      background: none;
+  }
+  .dropdown-menu a:hover {
+      background: #0077b6;
+      color: #fff;
+  }
   </style>
 </head>
 <body>
 <nav class="navbar">
-  <a href="index.html" class="logo"><i class="fa-solid fa-building"></i> BRIGADE MEADOWS</a>
+  <a href="main.html" class="logo"><i class="fa-solid fa-building"></i> BRIGADE MEADOWS</a>
   <button class="mobile-menu" id="mobile-menu-btn"><i class="fa fa-bars"></i></button>
   <ul class="nav-links" id="nav-links">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="main.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="amenities.html">Amenities</a></li>
     <li><a href="events.html">Events</a></li>
-    <li><a href="pet.html">Pet Policy</a></li>
+    <li class="dropdown">
+      <a href="#" class="dropbtn">Policy <i class="fa fa-chevron-down"></i></a>
+      <ul class="dropdown-menu">
+        <li><a href="security-policy.html">Security Policies</a></li>
+        <li><a href="interior-guidelines.html">Interior Work</a></li>
+        <li><a href="housekeeping.html">Housekeeping & Waste</a></li>
+        <li><a href="pet-policy.html">Pet Policy</a></li>
+        <li><a href="party-hall.html">Party Hall</a></li>
+        <li><a href="swimming-pool.html">Swimming Pool</a></li>
+        <li><a href="gym-guidelines.html">Gym</a></li>
+        <li><a href="play-area.html">Children's Play Area</a></li>
+        <li><a href="penalties.html">Rule Violation & Penalty</a></li>
+        <li><a href="move.html">Move-In / Move-Out</a></li>
     <li><a href="admin/" id="admin-link" style="display: none;">Admin</a></li>
   </ul>
 </nav>
